refactor: streamline questionnaire retrieval by simplifying logic and removing redundant methods