@@ -8,7 +8,6 @@ import de.imi.mopat.helper.model.QuestionnaireDTOMapper;
 import de.imi.mopat.model.Bundle;
 import de.imi.mopat.model.BundleQuestionnaire;
 import de.imi.mopat.model.Questionnaire;
-import de.imi.mopat.model.QuestionnaireGroup;
 import de.imi.mopat.model.dto.QuestionnaireDTO;
 import java.util.Comparator;
 import java.util.List;
@@ -42,31 +41,36 @@ public class BundleService {
     private QuestionnaireService questionnaireService;
 
     /**
-     * Retrieves available questionnaires for a specific bundle, sorted by name
-     * If the bundle is not found, returns all questionnaires
+     * Retrieves all available {@link QuestionnaireDTO} objects that are not currently assigned
+     * to the {@link Bundle} with the given ID. This method filters out any questionnaires that
+     * have no associated questions and sorts the results first by group name, then by group ID,
+     * and finally by version.
      *
-     * @param bundleId The ID of the bundle to retrieve available questionnaires for
-     * @return A list of {@link QuestionnaireDTO} objects representing the available questionnaires
+     * @param bundleId The ID of the {@link Bundle} from which unassigned questionnaires should be retrieved.
+     * @return A sorted list of {@link QuestionnaireDTO} objects that are not assigned to the specified bundle
+     *         and contain at least one question. If the bundle ID is null or not found, all available questionnaires
+     *         are returned.
      */
     public List<QuestionnaireDTO> getAvailableQuestionnaires(final Long bundleId) {
         Optional<Bundle> bundle = findBundleById(bundleId);
 
-        if (bundle.isEmpty()) {
-            return questionnaireService.getAllQuestionnaireDTOs();
-        }
+        List<Questionnaire> unassignedQuestionnaires;
+        unassignedQuestionnaires = bundle
+                .map(this::getUnassignedQuestionnaires)
+                .orElseGet(() -> questionnaireService.getAllQuestionnaires());
 
-        Set<Long> unassignedGroupIds = getUnassignedGroupIds(bundle.get());
-        List<QuestionnaireGroup> unassignedQuestionnaireGroups = questionnaireGroupService.getQuestionnaireGroups(unassignedGroupIds);
-
-        // Flatten the sorted QuestionnaireGroups into a list of QuestionnaireDTOs
-        return unassignedQuestionnaireGroups.stream()
-                .map(group -> group.getQuestionnaires().stream()
-                        .min(Comparator.comparingInt(Questionnaire::getVersion)))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .map(this::toQuestionnaireDTO)
-                .sorted(Comparator.comparing(QuestionnaireDTO::getName))
-                .collect(Collectors.toList());
+        return unassignedQuestionnaires.stream()
+                .filter(questionnaire -> !questionnaire.getQuestions().isEmpty())
+                .map(questionnaire -> {
+                    QuestionnaireDTO questionnaireDTO = questionnaireDTOMapper.apply(questionnaire);
+                    questionnaireDTO.setHasScores(scoreDao.hasScore(questionnaire));
+                    return questionnaireDTO;
+                })
+                .sorted(
+                        Comparator.comparing(QuestionnaireDTO::getGroupName, String::compareToIgnoreCase)
+                                .thenComparing(QuestionnaireDTO::getGroupId)
+                                .thenComparing(QuestionnaireDTO::getVersion))
+                .toList();
     }
 
     /**
@@ -77,38 +81,26 @@ public class BundleService {
      */
     private Optional<Bundle> findBundleById(Long bundleId) {
         return bundleDao.getAllElements().stream()
-                .filter(b1 -> b1.getId().equals(bundleId))
+                .filter(bundle -> bundle.getId().equals(bundleId))
                 .findFirst();
     }
 
     /**
-     * Retrieves the set of group IDs that are not assigned to any questionnaire in the given bundle
+     * Retrieves the set of questionnaires that are not assigned to the given bundle
      *
      * @param bundle The bundle to check for assigned group IDs
-     * @return A set of unassigned group IDs
+     * @return A List of unassigned questionnaires
      */
-    private Set<Long> getUnassignedGroupIds(Bundle bundle) {
-        Set<Long> assignedGroupIds = bundle.getBundleQuestionnaires().stream()
-                .map(bq -> bq.getQuestionnaire().getGroup().getId())
+    private List<Questionnaire> getUnassignedQuestionnaires(Bundle bundle) {
+        Set<Questionnaire> assignedQuestionnaires = bundle.getBundleQuestionnaires().stream()
+                .map(BundleQuestionnaire::getQuestionnaire)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
 
-        Set<Long> allGroupIds = questionnaireGroupService.getAllGroupIds();
-        allGroupIds.removeAll(assignedGroupIds);
+        List<Questionnaire> allQuestionnaires = questionnaireService.getAllQuestionnaires();
+        allQuestionnaires.removeAll(assignedQuestionnaires);
 
-        return allGroupIds;
-    }
-
-    /**
-     * Converts a {@link Questionnaire} to a {@link QuestionnaireDTO}.
-     *
-     * @param questionnaire The questionnaire to convert.
-     * @return A {@link QuestionnaireDTO} object.
-     */
-    private QuestionnaireDTO toQuestionnaireDTO(Questionnaire questionnaire) {
-        QuestionnaireDTO questionnaireDTO = questionnaireDTOMapper.apply(questionnaire);
-        questionnaireDTO.setHasScores(scoreDao.hasScore(questionnaire));
-        return questionnaireDTO;
+        return allQuestionnaires;
     }
 
     /** Finds {@link BundleQuestionnaire} objects by the ID of the questionnaire.
